[gd_scene load_steps=69 format=2]

[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__IDLE_001.png" type="Texture" id=1]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__IDLE_003.png" type="Texture" id=2]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__IDLE_004.png" type="Texture" id=3]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__IDLE_006.png" type="Texture" id=4]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__IDLE_007.png" type="Texture" id=5]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__IDLE_005.png" type="Texture" id=6]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__IDLE_008.png" type="Texture" id=7]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__IDLE_009.png" type="Texture" id=8]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__WALK_000.png" type="Texture" id=9]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__WALK_001.png" type="Texture" id=10]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__IDLE_000.png" type="Texture" id=11]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__IDLE_002.png" type="Texture" id=12]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__WALK_003.png" type="Texture" id=13]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__WALK_006.png" type="Texture" id=14]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__WALK_002.png" type="Texture" id=15]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__WALK_007.png" type="Texture" id=16]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__WALK_005.png" type="Texture" id=17]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__WALK_004.png" type="Texture" id=18]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__RUN_006.png" type="Texture" id=19]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__JUMP_002.png" type="Texture" id=20]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__RUN_009.png" type="Texture" id=21]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__RUN_002.png" type="Texture" id=22]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__DIE_006.png" type="Texture" id=23]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__ATTACK_004.png" type="Texture" id=24]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__ATTACK_005.png" type="Texture" id=25]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__ATTACK_003.png" type="Texture" id=26]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__JUMP_005.png" type="Texture" id=27]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__JUMP_008.png" type="Texture" id=28]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__DIE_007.png" type="Texture" id=29]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__RUN_003.png" type="Texture" id=30]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__WALK_008.png" type="Texture" id=31]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__DIE_005.png" type="Texture" id=32]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__RUN_001.png" type="Texture" id=33]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__JUMP_003.png" type="Texture" id=34]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__JUMP_006.png" type="Texture" id=35]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__JUMP_004.png" type="Texture" id=36]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__JUMP_007.png" type="Texture" id=37]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__ATTACK_002.png" type="Texture" id=38]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__DIE_009.png" type="Texture" id=39]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__RUN_005.png" type="Texture" id=40]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__ATTACK_008.png" type="Texture" id=41]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__ATTACK_000.png" type="Texture" id=42]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__JUMP_001.png" type="Texture" id=43]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__ATTACK_009.png" type="Texture" id=44]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__DIE_001.png" type="Texture" id=45]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__DIE_002.png" type="Texture" id=46]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__DIE_000.png" type="Texture" id=47]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__WALK_009.png" type="Texture" id=48]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__RUN_000.png" type="Texture" id=49]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__ATTACK_001.png" type="Texture" id=50]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__ATTACK_007.png" type="Texture" id=51]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__JUMP_000.png" type="Texture" id=52]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__JUMP_009.png" type="Texture" id=53]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__DIE_004.png" type="Texture" id=54]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__RUN_008.png" type="Texture" id=55]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__DIE_003.png" type="Texture" id=56]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__ATTACK_006.png" type="Texture" id=57]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__RUN_004.png" type="Texture" id=58]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__RUN_007.png" type="Texture" id=59]
[ext_resource path="res://Assets_2/ASSETS/_PNG/1_KNIGHT/Knight_01__DIE_008.png" type="Texture" id=60]
[ext_resource path="res://src/Actors/lvl2_enemy_1.gd" type="Script" id=61]
[ext_resource path="res://assets/sounds/switch23.ogg" type="AudioStream" id=62]
[ext_resource path="res://Assets_2/ASSETS/sound and music/wv-sword.ogg" type="AudioStream" id=63]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 1 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 45 ), ExtResource( 56 ), ExtResource( 46 ), ExtResource( 54 ), ExtResource( 32 ), ExtResource( 23 ), ExtResource( 29 ), ExtResource( 60 ), ExtResource( 39 ) ],
"loop": true,
"name": "die",
"speed": 9.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 38 ), ExtResource( 50 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 57 ), ExtResource( 51 ), ExtResource( 41 ), ExtResource( 44 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 10 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 31 ), ExtResource( 48 ) ],
"loop": true,
"name": "walk",
"speed": 9.0
}, {
"frames": [ ExtResource( 52 ), ExtResource( 43 ), ExtResource( 36 ), ExtResource( 34 ), ExtResource( 20 ), ExtResource( 27 ), ExtResource( 35 ), ExtResource( 37 ), ExtResource( 28 ), ExtResource( 53 ) ],
"loop": true,
"name": "jump",
"speed": 4.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 33 ), ExtResource( 30 ), ExtResource( 22 ), ExtResource( 58 ), ExtResource( 40 ), ExtResource( 19 ), ExtResource( 59 ), ExtResource( 55 ), ExtResource( 21 ) ],
"loop": true,
"name": "run",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.6417, 40.1251 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30.8089, 35.7307 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 26.917, 39.5243 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 26.3873, 40 )

[node name="lvl2_enemy_1" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 61 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.175, 0.175 )
frames = SubResource( 1 )
animation = "run"
speed_scale = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.99319, -11.2429 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 1.58739, -11.0671 )
scale = Vector2( 2.95295, 4.30671 )
process_parent = true
physics_process_parent = true

[node name="Death" type="Area2D" parent="."]
show_behind_parent = true
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
modulate = Color( 0.101961, 0.0980392, 0.776471, 1 )
position = Vector2( -0.529732, -13.773 )
shape = SubResource( 3 )

[node name="attackingArea" type="Area2D" parent="."]
show_behind_parent = true
position = Vector2( 7.2063, -1.19055 )
collision_layer = 2

[node name="right_attack" type="CollisionShape2D" parent="attackingArea"]
show_behind_parent = true
position = Vector2( 64.5858, -8.7937 )
shape = SubResource( 4 )

[node name="left_attack" type="CollisionShape2D" parent="attackingArea"]
show_behind_parent = true
position = Vector2( -79.7921, -8 )
shape = SubResource( 5 )

[node name="enemy_attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 63 )

[node name="enemy_death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 62 )
volume_db = -14.136
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Death" to="." method="_on_Death_area_entered"]
[connection signal="body_entered" from="attackingArea" to="." method="_on_attackingArea_body_entered"]
